--- a/apps/myownradio/myownradio-mysql-pvc.yaml
+++ b/apps/myownradio/myownradio-mysql-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: myownradio-mysql-data-volume-claim
+  name: myownradio-mysql-data
 spec:
   storageClassName: local-path
   accessModes:
