--- a/apps/myownradio/myownradio-server-deployment.yaml
+++ b/apps/myownradio/myownradio-server-deployment.yaml
@@ -41,7 +41,7 @@ spec:
                   name: myownradio-mysql-configmap
                   key: database
             - name: DB_HOST
-              value: myownradio-mysql
+              value: myownradio-mysql.svc.cluster.local
             - name: FACEBOOK_APP_ID
               valueFrom:
                 secretKeyRef:
