add pi server metrics

--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - resources/sealed-secrets.yaml
   - resources/busybox.yaml
   - resources/server-metrics.yaml
+  - resources/pi-metrics.yaml
 
   # Infrastructure Apps
   - apps/grafana.yaml
