create superorder-me namespace

--- a/apps/superorder-me/kustomization.yaml
+++ b/apps/superorder-me/kustomization.yaml
@@ -7,5 +7,6 @@ commonLabels:
   app: superorder-me
 
 resources:
+  - namespace.yaml
   - dockerconfig-sealedsecret.yaml
-  - superorder-binance-adapter-deployment.yaml
+  - binance-adapter-deployment.yaml
