--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -22,4 +22,5 @@ resources:
   - apps/prometheus.yaml
   - apps/traefik.yaml
   - apps/nginx-lb.yaml
+  - apps/loki.yaml
   - argocd/argocd-server-ingressroute.yaml
