--- a/bootstrap/apps/loki.yaml
+++ b/bootstrap/apps/loki.yaml
@@ -9,8 +9,8 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'https://grafana.github.io/helm-charts'
-    path: grafana/loki-stack
+    repoURL: 'https://github.com/grafana/helm-charts.git'
+    path: charts/loki-stack
     targetRevision: HEAD
   destination:
     server: 'https://kubernetes.default.svc'
