add openvpn metrics

--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -17,6 +17,7 @@ resources:
   - resources/server-metrics.yaml
   - resources/pi-metrics.yaml
   - resources/kvm-metrics.yaml
+  - resources/openvpn-metrics.yaml
 
   # Infrastructure Apps
   - apps/grafana.yaml
