create ingress routes for server and streamer

--- a/apps/myownradio/kustomization.yaml
+++ b/apps/myownradio/kustomization.yaml
@@ -25,10 +25,12 @@ resources:
   - myownradio-server-service.yaml
   - myownradio-server-configmap.yaml
   - myownradio-server-sealedsecret.yaml
+  - myownradio-server-ingressroute.yaml
 
   # streamer
   - myownradio-streamer-deployment.yaml
   - myownradio-streamer-service.yaml
+  - myownradio-streamer-ingressroute.yaml
 
   # file-server
   - myownradio-fileserver-deployment.yaml
