--- a/apps/myownradio/myownradio-streamer-deployment.yaml
+++ b/apps/myownradio/myownradio-streamer-deployment.yaml
@@ -11,7 +11,6 @@ spec:
     metadata:
       annotations:
         prometheus.io/scrape: "true"
-        prometheus.io/path: /metrics
         prometheus.io/port: "8080"
       labels:
         deployment: myownradio-streamer
@@ -23,7 +22,7 @@ spec:
             - name: BIND_ADDRESS
               value: 0.0.0.0:8080
             - name: MOR_BACKEND_URL
-              value: http://myownradio-server.svc.cluster.local:80
+              value: http://myownradio-server.myownradio.svc.cluster.local:80
             - name: STREAM_MUTATION_TOKEN
               valueFrom:
                 secretKeyRef:
