--- a/apps/myownradio/myownradio-mysql-deployment.yaml
+++ b/apps/myownradio/myownradio-mysql-deployment.yaml
@@ -19,6 +19,13 @@ spec:
       containers:
         - name: mysql
           image: mysql:5.6
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "200m"
+            limits:
+              memory: "512Mi"
+              cpu: "400m"
           env:
             - name: MYSQL_USER
               valueFrom:
