--- a/apps/myownradio/myownradio-server-deployment.yaml
+++ b/apps/myownradio/myownradio-server-deployment.yaml
@@ -24,6 +24,13 @@ spec:
       containers:
         - name: php-fpm
           image: pldin601/myownradio-backend-php:21.04.789615300-33bc09f
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
           env:
             - name: DB_USERNAME
               valueFrom:
@@ -102,6 +109,13 @@ spec:
               name: myownradio-server-storage
         - name: nginx
           image: pldin601/myownradio-backend-nginx:21.04.773120661-2daabdd
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "200m"
+            limits:
+              memory: "512Mi"
+              cpu: "400m"
           ports:
             - containerPort: 80
       imagePullSecrets:
