--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -18,6 +18,7 @@ resources:
   - resources/pi-metrics.yaml
   - resources/kvm-metrics.yaml
   - resources/openvpn-metrics.yaml
+  - resources/romans-server.yaml
 
   # Infrastructure Apps
   - apps/grafana.yaml
