--- a/apps/superorder-old/postgres-migration.yaml
+++ b/apps/superorder-old/postgres-migration.yaml
@@ -12,7 +12,9 @@ spec:
         - name: postgres-migration
           image: pldin601/superorder-v1:0b52e10cf04581212e93165f2779b32ab6709c82
           command:
-            - npx knex migrate:latest
+            - npx
+            - knex
+            - migrate:latest
           env:
             - name: NODE_ENV
               value: development
