--- a/apps/superorder-old/postgres.yaml
+++ b/apps/superorder-old/postgres.yaml
@@ -31,7 +31,7 @@ spec:
             claimName: postgres-data-volume-claim
       containers:
         - name: postgres
-          image: postgres
+          image: postgres:9.6-alpine
           env:
             - name: POSTGRES_USER
               value: so
