use number port

--- a/apps/superorder-old/app.yaml
+++ b/apps/superorder-old/app.yaml
@@ -12,7 +12,7 @@ spec:
       services:
         - kind: Service
           name: app
-          port: http
+          port: 8080
           scheme: http
 ---
 kind: Service
