deploy superorder-old app to us region

--- a/apps/superorder-old/app.yaml
+++ b/apps/superorder-old/app.yaml
@@ -123,3 +123,5 @@ spec:
                   key: COINPAYMENTS_IPN_SECRET
             - name: HTTPS_PROXY
               value: 52.183.8.192:3128
+      nodeSelector:
+        region: us
