--- a/bootstrap/resources/sealed-secrets.yaml
+++ b/bootstrap/resources/sealed-secrets.yaml
@@ -11,7 +11,7 @@ spec:
   source:
     repoURL: 'https://github.com/bitnami-labs/sealed-secrets.git'
     path: helm/sealed-secrets
-    targetRevision: HEAD
+    targetRevision: helm-v2.0.0
     helm:
       parameters:
         # Fixes issue https://github.com/argoproj/argo-cd/issues/5991
