--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -1,9 +1,8 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
   name: arbitrary
 
 resources:
-  # Resources
-#   - resources/local-path-provisioner.yaml
-#   - resources/sealed-secrets.yaml
+  - resources/sealed-secrets.yaml
