--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -6,4 +6,5 @@ metadata:
 
 resources:
   - resources/sealed-secrets.yaml
+  - resources/traefik-config.yaml
   - argocd/argocd-server-ingressroute.yaml
