enable myownradio application

--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -5,6 +5,8 @@ metadata:
   name: arbitrary
 
 resources:
+  - apps/myownradio.yaml
+
   - resources/sealed-secrets.yaml
   - resources/traefik-config.yaml
   - argocd/argocd-server-ingressroute.yaml
