casa: change mysql image to mysql:8.0.29-debian

--- a/k8s/casa/apps/myownradio/myownradio-mysql-deployment.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-mysql-deployment.yaml
@@ -18,7 +18,7 @@ spec:
             claimName: myownradio-mysql-data
       containers:
         - name: mysql
-          image: mysql/mysql-server:8.0.29
+          image: mysql:8.0.29-oracle
           resources:
             requests:
               memory: "256Mi"
