--- a/k8s/casa/apps/musicloud/musicloud-postgres-migration-job.yaml
+++ b/k8s/casa/apps/musicloud/musicloud-postgres-migration-job.yaml
@@ -9,7 +9,7 @@ spec:
     spec:
       containers:
         - name: migration
-          image: pldin601/musicloud-migration
+          image: pldin601/musicloud-migration:22.05.2404584526-01c707e
           env:
             - name: POSTGRES_DB
               value: musicloud
