--- a/k8s/homefs.biz/bootstrap/apps/grafana.yaml
+++ b/k8s/homefs.biz/bootstrap/apps/grafana.yaml
@@ -10,7 +10,7 @@ spec:
   project: default
   source:
     repoURL: 'https://github.com/pldin601/homefs-k8s.git'
-    path: apps/grafana
+    path: k8s/homefs.biz/apps/grafana
     targetRevision: HEAD
   destination:
     server: 'https://kubernetes.default.svc'
