--- a/k8s/homefs.biz/apps/myownradio/myownradio-mysql-deployment.yaml
+++ b/k8s/homefs.biz/apps/myownradio/myownradio-mysql-deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: mysql
           image: mysql:8.0.0
-          # command: ['tail', '-f', '/dev/null']
+          command: ['tail', '-f', '/dev/null']
           resources:
             requests:
               memory: "256Mi"
