add FILE_SERVER_ENDPOINT env var

--- a/k8s/casa/apps/myownradio/radio-manager-backend-deployment.yaml
+++ b/k8s/casa/apps/myownradio/radio-manager-backend-deployment.yaml
@@ -45,5 +45,7 @@ spec:
                   key: database
             - name: MYSQL_HOST
               value: myownradio-mysql.myownradio.svc.cluster.local
+            - name: FILE_SERVER_ENDPOINT
+              value: http://myownradio-server
       imagePullSecrets:
         - name: dockerconfig
