set LOG_LEVEL to Debug

--- a/k8s/casa/apps/myownradio/myownradio-streamer-deployment.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-streamer-deployment.yaml
@@ -26,6 +26,8 @@ spec:
               memory: "1024Mi"
               cpu: "2000m"
           env:
+            - name: LOG_LEVEL
+              value: Debug
             - name: BIND_ADDRESS
               value: 0.0.0.0:8080
             - name: MOR_BACKEND_URL
