--- a/k8s/casa/bootstrap/resources/vault.yaml
+++ b/k8s/casa/bootstrap/resources/vault.yaml
@@ -14,8 +14,8 @@ spec:
     targetRevision: 0.22.1
     helm:
       parameters:
-        - name: server.ha.enabled
-          value: 'false'
+        - name: server.dev.enabled
+          value: 'true'
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: kube-system
