vault: expose ui

--- a/k8s/casa/bootstrap/resources/vault.yaml
+++ b/k8s/casa/bootstrap/resources/vault.yaml
@@ -39,6 +39,6 @@ spec:
       services:
         - name: vault
           port: 8200
-          scheme: http
+          kind: Service
   tls:
     certResolver: default
