vault: expose ui

--- a/k8s/casa/bootstrap/resources/vault.yaml
+++ b/k8s/casa/bootstrap/resources/vault.yaml
@@ -28,7 +28,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: vault
-  namespace: argocd
+  namespace: kube-system
 spec:
   entryPoints:
     - websecure
